# clang-upc

./: .gitignore  CMakeLists.txt  README.txt
include/clang/AST/: ASTContext.h  Decl.h  Expr.h  OperationKinds.h  RecursiveASTVisitor.h  Stmt.h  Type.h  TypeLoc.h  TypeNodes.def
include/clang/Basic/: Diagnostic.h  DiagnosticASTKinds.td  DiagnosticDriverKinds.td  DiagnosticGroups.td  DiagnosticParseKinds.td  DiagnosticSemaKinds.td  LangOptions.def  StmtNodes.td  TokenKinds.def  TypeTraits.h  Version.h  Version.inc.in
include/clang/Config/: config.h.cmake
include/clang/Driver/: CC1Options.td  Driver.h  Options.td  Types.def  Types.h
include/clang/Frontend/: CodeGenOptions.def  CodeGenOptions.h  FrontendOptions.h
include/clang/Parse/: Parser.h
include/clang/Sema/: DeclSpec.h  Scope.h  ScopeInfo.h  Sema.h
include/clang/Serialization/: ASTBitCodes.h  ASTReader.h  ASTWriter.h
lib/AST/: ASTContext.cpp  ASTDumper.cpp  ASTImporter.cpp  Expr.cpp  ExprClassification.cpp  ExprConstant.cpp  ItaniumMangle.cpp  MicrosoftMangle.cpp  Stmt.cpp  StmtDumper.cpp  StmtPrinter.cpp  StmtProfile.cpp  Type.cpp  TypePrinter.cpp
lib/Analysis/: CFG.cpp
lib/Basic/: IdentifierTable.cpp  Version.cpp
lib/CodeGen/: CGCall.cpp  CGDebugInfo.cpp  CGDecl.cpp  CGDeclCXX.cpp  CGDeclUPC.cpp  CGExpr.cpp  CGExprAgg.cpp  CGExprComplex.cpp  CGExprConstant.cpp  CGExprScalar.cpp  CGExprUPC.cpp  CGRTTI.cpp  CGStmt.cpp  CGStmtUPC.cpp  CGValue.h  CMakeLists.txt  CodeGenFunction.cpp  CodeGenFunction.h  CodeGenModule.cpp  CodeGenModule.h  CodeGenTypes.cpp  CodeGenTypes.h  TargetInfo.cpp
lib/Driver/: Driver.cpp  ToolChains.cpp  Tools.cpp  Tools.h  Types.cpp
lib/Frontend/: CompilerInstance.cpp  CompilerInvocation.cpp  FrontendActions.cpp  FrontendOptions.cpp  InitPreprocessor.cpp
lib/Headers/: stdarg.h
lib/Parse/: ParseDecl.cpp  ParseDeclCXX.cpp  ParseExpr.cpp  ParsePragma.cpp  ParsePragma.h  ParseStmt.cpp  Parser.cpp
lib/Sema/: DeclSpec.cpp  JumpDiagnostics.cpp  Sema.cpp  SemaCast.cpp  SemaChecking.cpp  SemaDecl.cpp  SemaExceptionSpec.cpp  SemaExpr.cpp  SemaExprMember.cpp  SemaInit.cpp  SemaLookup.cpp  SemaStmt.cpp  SemaTemplate.cpp  SemaTemplateDeduction.cpp  SemaType.cpp  TreeTransform.h
lib/Serialization/: ASTReader.cpp  ASTReaderStmt.cpp  ASTWriter.cpp  ASTWriterStmt.cpp
lib/StaticAnalyzer/Core/: BugReporter.cpp  CoreEngine.cpp  ExprEngine.cpp  ExprEngineC.cpp  ExprEngineCallAndReturn.cpp  PathDiagnostic.cpp
runtime/: CMakeLists.txt
runtime/libupc/: CMakeLists.txt  LICENSE-INTEL.TXT  LICENSE-INTREPID.TXT  LICENSE-MTU.TXT  Makefile.am  Makefile.in  config.h.cmake  upc-crtstuff.c
runtime/libupc/collectives/: upc_coll.h  upc_coll_broadcast.upc  upc_coll_err.upc  upc_coll_exchange.upc  upc_coll_gather.upc  upc_coll_gather_all.upc  upc_coll_init.upc  upc_coll_permute.upc  upc_coll_prefix_reduce.in  upc_coll_prefix_reduce.upc  upc_coll_readme.txt  upc_coll_reduce.in  upc_coll_reduce.upc  upc_coll_scatter.upc  upc_coll_sort.upc
runtime/libupc/config/default/: upc-crt-config.h
runtime/libupc/include/: gasp.h  gasp_upc.h  gcc-upc.h  pupc.h  upc.h  upc_collective.h  upc_relaxed.h  upc_strict.h  upc_tick.h
runtime/libupc/portals4/: gupcr_access.c  gupcr_access.h  gupcr_addr.c  gupcr_alloc.h  gupcr_alloc.upc  gupcr_barrier.c  gupcr_barrier.h  gupcr_broadcast.c  gupcr_broadcast.h  gupcr_clock.c  gupcr_coll_broadcast.upc  gupcr_coll_init.upc  gupcr_coll_reduce.in  gupcr_coll_reduce.upc  gupcr_coll_sup.c  gupcr_coll_sup.h  gupcr_config.h  gupcr_defs.h  gupcr_env.c  gupcr_gmem.c  gupcr_gmem.h  gupcr_lib.h  gupcr_lock.h  gupcr_lock.upc  gupcr_lock_sup.c  gupcr_lock_sup.h  gupcr_main.c  gupcr_mem.c  gupcr_node.c  gupcr_node.h  gupcr_node_mem_mmap.c  gupcr_node_mem_posix.c  gupcr_pgm_info.c  gupcr_portals.c  gupcr_portals.h  gupcr_pts.h  gupcr_runtime.h  gupcr_shutdown.c  gupcr_shutdown.h  gupcr_sup.h  (+6 more)
runtime/libupc/smp/: upc-lib.in  upc_access.c  upc_access.h  upc_accessg.c  upc_addr.c  upc_affinity.c  upc_affinity.h  upc_affinity_stub.c  upc_alloc.upc  upc_allocg.upc  upc_backtrace.c  upc_backtrace.h  upc_backtrace_sup.c  upc_barrier.upc  upc_config.h  upc_debug.c  upc_debug.h  upc_defs.h  upc_gasp.c  upc_gum.c  upc_lib.h  upc_libg.c  upc_lock.h  upc_lock.upc  upc_lock_sup.c  upc_lock_sup.h  upc_main.c  upc_mem.c  upc_mem.h  upc_numa.c  upc_numa.h  upc_numa_stub.c  upc_pgm_info.c  upc_pts.h  upc_pupc.c  upc_pupc.h  upc_sup.h  upc_sync.h  upc_sysdep.c  upc_sysdep.h  (+2 more)
runtime/libupc/testsuite/libgupc.upc/intrepid/: test22.upc
test/: CMakeLists.txt  lit.cfg
test/AST/: README.c
test/CodeGenUPC/: arithmetic.upc  array-sizes.upc  array.upc  atomic-compound-assign.upc  atomic.upc  barrier.upc  bitfield.upc  cast.upc  compare.upc  compound_assign.upc  cond.upc  forall.upc  incdec.upc  init-shared-int.upc  member.upc  non-shared.upc  pts.upc  read.upc  static-array.upc  upc-debug.upc  write.upc
test/Frontend/: upc-packed-bits.upc  upc-pts.upc
test/Misc/: warning-flags.c
test/PCH/: upc-pragma.h  upc-pragma.upc
test/Preprocessor/: upc-predefined.upc
test/Sema/: warn-documentation.cpp
test/SemaUPC/: __atomic_compare_exchange.upc  arithmetic.upc  array-types.upc  block-size-limit.upc  cast.upc  constant-initializer.upc  dup-layout-specifier.upc  imp-cast.upc  local-shared.upc  pragma.upc  relaxed-strict.upc  shared-field.upc  shared-function.upc  shared-int.upc  shared-neg.upc  shared-star-pointer.upc  sizeof-pointer.upc  sizeof.upc  star-deduced-from-init-dyn.upc  star-deduced-from-init.upc  syncronization.upc  type-compatibility.upc  upc_blocksizeof.upc  upc_elemsizeof.upc  upc_forall.upc  upc_localsizeof.upc
tools/: CMakeLists.txt  Makefile
tools/ast-test/: CMakeLists.txt  Makefile  ast-test.cpp
tools/driver/: CMakeLists.txt  clang_symlink.cmake  driver.cpp
tools/libclang/: CIndex.cpp  CXCursor.cpp  RecursiveASTVisitor.h
utils/TableGen/: ClangAttrEmitter.cpp
